--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         <div class="container">
           <div class="promo__container">
             <div class="promo__logo">
-              <img src="/src/images/icons/yellowstar.svg" alt="" />
+              <img src="./src/images/icons/yellowstar.svg" alt="" />
               <h2 class="promo__title">Новая коллекция французских авторов</h2>
             </div>
             <p class="promo__info">
@@ -348,7 +348,7 @@
     <section class="team container">
       <div class="team__ourteam">
         <img class="team__hand"
-          src="/src/images/mainpage/Group 210.png"
+          src="./src/images/mainpage/Group 210.png"
           alt="рука вроде бы человеческая с кистями вложенными в неё"
         />
         </div>
