--- a/index.html
+++ b/index.html
@@ -412,9 +412,9 @@
 </div>
   <div class="footer__social"> 
     <div class="footer__links"> 
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="/src/images/link/facebook.svg" alt="facebook"></a>     
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="/src/images/link/instagrame.svg" alt="instargrame"></a>
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="/src/images/link/youtube.svg" alt="youtube"></a>    
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="../src/images/link/facebook.svg" alt="facebook"></a>     
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="../src/images/link/instagrame.svg" alt="instargrame"></a>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="../src/images/link/youtube.svg" alt="youtube"></a>    
   </div>   
     <p class="footer__gray footer__liltext">Ink. House ® <br> All rights reserved</p>
    </div>
