--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="./style/style.css" />
   </head>
-  <header>
+  <header class="header__top">
     <div class="header__hero container">
       <div>
         <a href="#" class="header__logo greentext">
@@ -25,9 +25,9 @@
       </div>
       <div class="header__line"></div>
       <nav class="header__navigation">
-        <p class="header__menu">Репродукции</p>
-        <p class="header__menu">Новинки</p>
-        <p class="header__menu">О нас</p>
+       <a href="#reproduction"><p class="header__menu">Репродукции</p></a> 
+       <a href="#new"><p class="header__menu">Новинки</p></a> 
+       <a href="#abus"><p class="header__menu">О нас</p></a> 
         <img
           src="./src/images/icons/shopping-cart.png"
           alt=""
@@ -47,14 +47,15 @@
           Высокое качество отрисовки на плотной бумаге или льняном холсте.
           Редкие произведения, доступные цены.
         </p>
-        <button class="button hero__button">Продукция</button>
+       <a href="#reproduction"><button class="button hero__button">Продукция</button></a> 
       </div>
     </section>
-    <section class="container">
-      <div class="product__choise">
+    <div id="reproduction"></div>
+    <section class="container" >
+      <div class="product__choise" >
         <h2 class="product__reproduction">Репродукции</h2>
       </div>
-      <div class="hueta"></div>
+      <div class="hueta" ></div>
       <div class="pruduct__hiddenpool">
         <input type="radio" id="fr" class="nn" name="lol" />
         <input type="radio" id="gr" class="nn" name="lol" />
@@ -324,7 +325,7 @@
         </div>
       </div>
     </section>
-    <section class="promo promo__background">
+    <section class="promo promo__background" id="new">
       <div class="promo__background_blackstar">
         <div class="container">
           <div class="promo__container">
@@ -345,7 +346,7 @@
         </div>
       </div>
     </section>
-    <section class="team container">
+    <section class="team container" id="abus">
       <div class="team__ourteam">
         <img class="team__hand"
           src="./src/images/mainpage/Group 210.png"
@@ -392,19 +393,19 @@
         </div>
         <div class="footer__navigation">
     <ul><div class="footer__ulli">
-        <li class="footer__black">Репродукции</li>
+       <a href="#reproduction"><li class="footer__black">Репродукции</li></a> 
         <li class="footer__gray">Франция</li>
         <li class="footer__gray">Германия</li>
         <li class="footer__gray">Англия</li></div>
   </ul>
     <ul><div class="footer__ulli">
-        <li class="footer__black">Новинки</li>
+       <a href="#new"><li class="footer__black">Новинки</li></a> 
         <li class="footer__gray">2021</li>
         <li class="footer__gray">2022</li>
         <li class="footer__gray"></li></div>
   </ul>
       <ul><div class="footer__ulli">
-        <li class="footer__black">О нас</li>
+       <a href=""><li class="footer__black">О нас</li></a> 
         <li class="footer__gray">Художники</li>
         <li class="footer__gray">Менеджеры</li>
         <li class="footer__gray"></li></div>
