--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </header>
   <main>
     <section class="hero container">
-      <img src="./src/images/mainpage/bird.png" alt="Птица на ветке" />
+      <img class="hero__bird" src="./src/images/mainpage/bird.png" alt="Птица на ветке" />
       <div class="hero__discription">
         <h1 class="hero__title">
           Реплики картин от <span class="greentext">Ink.House</span>
@@ -452,6 +452,10 @@
         alt=""
       />
             <img
+      src="https://c.tenor.com/Jc9jT66AJRwAAAAd/tenor.gif"
+        alt=""
+      />
+        <img
       src="https://c.tenor.com/Jc9jT66AJRwAAAAd/tenor.gif"
         alt=""
       />
