--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="./src/images/link/instagrame.svg" alt="instargrame"></a>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="./src/images/link/youtube.svg" alt="youtube"></a>    
   </div>   
-    <p class="footer__gray footer__liltext">Ink. House ® <br> All rights reserved</p>
+    <p class="footer__gray footer__liltext">Ink. House ® <br class="footer__br"> All rights reserved</p>
    </div>
         
       </nav>
