update adaptive tablet

--- a/index.html
+++ b/index.html
@@ -412,6 +412,7 @@
   </ul>
 </div>
   <div class="footer__social"> 
+    <div class="footer__line"></div>
     <div class="footer__links"> 
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="./src/images/link/facebook.svg" alt="facebook"></a>     
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="./src/images/link/instagrame.svg" alt="instargrame"></a>
