--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </section>
     <div id="reproduction"></div>
-    <section class="container" >
+    <section class="product container">
       <div class="product__choise" >
         <h2 class="product__reproduction">Репродукции</h2>
       </div>
